--- a/templates/main_app.html
+++ b/templates/main_app.html
@@ -2,151 +2,955 @@
 
 <html>
 
-
     <head>
-        <title>Spare Change Counter</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.js">
-        <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.5.2/js/fileinput.min.js">
-        <meta name = "viewport"content = "width = device-width, initial-scale = 1">
 
+        <title>CoinEye</title>
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.css">
+
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700;800&family=Roboto:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+        <link rel="manifest" href="_manifest.json" data-pwa-version="set_in_manifest_and_pwa_js">
+
+        <link rel="apple-touch-icon" sizes="180x180" href="app/icons/icon-192x192.png">
+
+        <link rel="stylesheet" href="static/css/style.scss">
+
+        <link rel="stylesheet" href="static/css/bootstrap.scss">
+
+        <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+
+        <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
+
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Cabin">
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css">
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular/12.2.17/core.umd.min.js"></script>
+
+        <script>
+
+        window.Ionic = {
+
+            config: {
+
+                mode: 'ios'
+
+                }
+
+            }
+
+            </script>
+
+<meta name = "viewport" content = "width = device-width, initial-scale = 1">
 
 <style>
 
 body{background-color: black;
+
     background-size: cover;
-    font-family: Verdana, Helvetica, sans-serif;
-    margin-top:5px;
+
+    font-family: Cabin,Verdana,Helvetica;
+
+    margin-top:2px;
+
     margin-bottom:4px;
+
+    overflow:auto;
 
 }
 
     .topnav {
+
   overflow: hidden;
-  background-color: #333;
+
+  background-color: #3f3e40;
+
 }
 
 .topnav a {
+
   float: left;
+
   display: block;
+
   color: #f2f2f2;
+
   text-align: center;
-  padding: 14px 16px;
+
+  padding: 14px 17px;
+
   text-decoration: none;
+
   font-size: 17px;
+
   font-weight: bold;
+
 }
 
 .topnav a:hover {
+
   background-color: #ddd;
+
   color: black;
+
 }
 
 .topnav a.active {
-  background-color: gray;
-  color: black;
+
+  background-color: #3f3e40;
+
+  color: #rgb(176, 196, 222);
+
   font-weight: bold;
+
 }
 
 .topnav .icon {
+
   display: none;
+
 }
 
 @media screen and (max-width: 600px) {
+
   .topnav a:not(:first-child) {display: none;}
+
   .topnav a.icon {
+
     float: right;
+
     display: block;
+
   }
+
 }
 
 @media screen and (max-width: 600px) {
+
   .topnav.responsive {position: relative;}
+
   .topnav.responsive .icon {
+
     position: absolute;
+
     right: 0;
+
     top: 0;
-  }
-  .topnav.responsive a {
+
+}
+
+.topnav.responsive a {
+
     float: none;
+
     display: block;
+
     text-align: center;
-  }
+
+}
+
+.rcorners {
+
+    border-radius: 25px;
+
+    border: 2px white;
+
+    padding: 17px;
+
+    width: 98%;
+
+    height: 90%;
+
+    border-style: groove;
+
+    margin-top:6%;
+
+}
+
+.rcornersA {
+
+    border-radius: 25px;
+
+    border: 1px white;
+
+    padding: 4px;
+
+    width
+
+    border-style: groove;
+
+}
+
+ion-toggle {
+
+  height: 30px;
+
+  width:  73px;
+
+  --background:white;
+
+  padding: 2px;
+
+  margin-top:12px;
+
+  --handle-width: 30px;
+
+  --handle-height: 30px;
+
+  --handle-spacing: 2px;
+
+  --handle-border-radius: 100px;
+
+  overflow: visible;
+
+  contain: none;
+
+}
+
+.label {
+
+    color:white;
+
+    font-size:13px;
+
+    text-align:center;
+
+    margin-top:2px;
+
+    margin-left:75px;
+
+}
+
+.container.active a {
+
+    height:80%;
+
+    width:90%;
+
+    z-index:20;
+
+    border-radius:30px;
+
+    display:block;
+
+}
+
+.mult2rect {
+
+      height: 30px;
+
+      width: 7px;
+
+      margin: 0 2px;
+
+}
+
+.mult2rect1 {
+
+      background-color: #F5D76E;
+
+      -webkit-animation: mult2rect1 3s infinite linear;
+
+      animation: mult2rect1 3s infinite linear;
+
+}
+
+@-webkit-keyframes mult2rect1 {
+
+      0%, 10%, 70%, 80%, 100% {
+
+         -webkit-transform: scaleY(1);
+
+         transform: scaleY(1);
+
+      }
+
+      5%, 75% {
+
+         -webkit-transform: scaleY(2);
+
+         transform: scaleY(2);
+
+      }
+
+   }
+
+ @keyframes mult2rect1 {
+
+      0%, 10%, 70%, 80%, 100% {
+
+         -webkit-transform: scaleY(1);
+
+         transform: scaleY(1);
+
+      }
+
+      5%, 75% {
+
+         -webkit-transform: scaleY(2);
+
+         transform: scaleY(2);
+
+      }
+
+   }
+
+ .mult2rect2 {
+
+      background-color: #F4D03F;
+
+      -webkit-animation: mult2rect2 3s infinite linear;
+
+      animation: mult2rect2 3s infinite linear;
+
+   }
+
+ @-webkit-keyframes mult2rect2 {
+
+      0%, 5%, 15%,  65%, 75%, 100% {
+
+         -webkit-transform: scaleY(1);
+
+         transform: scaleY(1);
+
+      }
+
+      10%, 70% {
+
+         -webkit-transform: scaleY(2);
+
+         transform: scaleY(2);
+
+      }
+
+   }
+
+   @keyframes mult2rect2 {
+
+      0%, 5%, 15%,  65%, 75%, 100% {
+
+         -webkit-transform: scaleY(1);
+
+         transform: scaleY(1);
+
+      }
+
+      10%, 70% {
+
+         -webkit-transform: scaleY(2);
+
+         transform: scaleY(2);
+
+      }
+
+   }
+
+   .mult2rect3 {
+
+      background-color: #EB9532;
+
+      -webkit-animation: mult2rect3 3s infinite linear;
+
+      animation: mult2rect3 3s infinite linear;
+
+   }
+
+   @-webkit-keyframes mult2rect3 {
+
+      0%, 10%, 20%, 60%, 70%, 100% {
+
+         -webkit-transform: scaleY(1);
+
+         transform: scaleY(1);
+
+      }
+
+      15%, 65% {
+
+         -webkit-transform: scaleY(2);
+
+         transform: scaleY(2);
+
+      }
+
+   }
+
+   @keyframes mult2rect3 {
+
+      0%, 10%, 20%, 60%, 70%, 100% {
+
+         -webkit-transform: scaleY(1);
+
+         transform: scaleY(1);
+
+      }
+
+      15%, 65% {
+
+         -webkit-transform: scaleY(2);
+
+         transform: scaleY(2);
+
+      }
+
+   }
+
+   .mult2rect4 {
+
+      background-color: #EC644B;
+
+      -webkit-animation: mult2rect4 3s infinite linear;
+
+      animation: mult2rect4 3s infinite linear;
+
+   }
+
+   @-webkit-keyframes mult2rect4 {
+
+      0%, 15%, 25%, 55%, 65%, 100% {
+
+         -webkit-transform: scaleY(1);
+
+         transform: scaleY(1);
+
+      }
+
+      20%, 60% {
+
+         -webkit-transform: scaleY(2);
+
+         transform: scaleY(2);
+
+      }
+
+   }
+
+   @keyframes mult2rect4 {
+
+      0%, 15%, 25%, 55%, 65%, 100% {
+
+         -webkit-transform: scaleY(1);
+
+         transform: scaleY(1);
+
+      }
+
+      20%, 60% {
+
+         -webkit-transform: scaleY(2);
+
+         transform: scaleY(2);
+
+      }
+
+   }
+
+   .mult2rect5 {
+
+      background-color: #C0392B;
+
+      -webkit-animation: mult2rect5 3s infinite linear;
+
+      animation: mult2rect5 3s infinite linear;
+
+   }
+
+   @-webkit-keyframes mult2rect5 {
+
+      0%, 20%, 30%, 50%, 60%, 100% {
+
+         -webkit-transform: scaleY(1);
+
+         transform: scaleY(1);
+
+      }
+
+      25%, 55% {
+
+         -webkit-transform: scaleY(2);
+
+         transform: scaleY(2);
+
+      }
+
+   }
+
+   @keyframes mult2rect5 {
+
+      0%, 20%, 30%, 50%, 60%, 100% {
+
+         -webkit-transform: scaleY(1);
+
+         transform: scaleY(1);
+
+      }
+
+      25%, 55% {
+
+         -webkit-transform: scaleY(2);
+
+         transform: scaleY(2);
+
+      }
+
+   }
+
+.imgResult {
+
+    background-image:{{img_results}};
+
+    }
+
+        }
+
+footer {
+
+    display: block;
+
+    justify-content: center;
+
+    padding: 2px;
+
+    background-color: black;
+
+    color: gray;
+
+    font-size: 2px;
+
+    position: bottom;
+
+    margin: auto;
+
+}
 
 </style>
+
+<!---#9ba2a9--->
+
 </head>
 
-     <body>
+<!---<div class="mult2rect mult2rect1"></div>
 
-        <div class="topnav nav-fill" style="margin-bottom:3%;" id="myTopnav">
+   <div class="mult2rect mult2rect2"></div>
+
+   <div class="mult2rect mult2rect3"></div>
+
+   <div class="mult2rect mult2rect4"></div>
+
+   <div class="mult2rect mult2rect5"></div>--->
+
+<body>
+
+<div id="page">
+
+    <div class="topnav nav-fill" style="margin-bottom:15%;" id="myTopnav">
+
   <a href="#home" class="active">Home</a>
+
   <a href="https://github.com/N1TSUA-TATHAM-crzywrld/ChangeCounter.git">CodeBase</a>
+
   <a href="#contact">Contact</a>
+
   <a href="static/model_viewer.png">Model</a>
+
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
+
+    <i class="fa-solid fa-bars"></i>
+
   </a>
+
 </div>
 
 <Body>
 
-    <!---<div>
+    <div class="text-center">
+
+        <div id="resultImage"></div>
+
+        <div id="newToggle"></div>
+
+    </div>
+
+    <div class="container rcorners">
+
+        <h2 class="text-center container-sm" style="color: lightcyan; font-size: 13px;
+
+         font-family: Cabin, Verdana, Geneva, Tahoma;">Upload an image of your spare change. Recieve the sum value in less then 10 seconds.</h2>
+
+        <form class="ps-3 text-center" action="/", method="post" enctype="multipart/form-data" id="RootForm" style="margin-top:3px;
+
+        font-wieght: bold;">
+
+            <input class="form-control" type="file" name="img_file" style="font-size: 14px; font-wieght: bold;"
+
+            id="FormSubmit" onclick="Submission()">
+
+            <button class="btn btn-warning mt-3"
+
+            style="size:14% ;margin-top:12%;font-color:black;
+
+            padding:3px;font-family: Cabin, Verdana, Geneva, Tahoma;" type="submit" id="SubmitButton" onclick="updateButton()"
+
+            >Get Amount ----> $$$</button>
+
+        </form>
+
+        {% if output %}
+
+        <div class="text-center" ng-app="app" ng-controller="geek">
+
+            <ion-toggle class="checkbox" type="checkbox" onclick="alertEventChange()"
+
+            enable-on-off-labels="true" color="success" id="toggle"></ion-toggle>
+
+            </div>
+
+        <div class="text-center">
+
+            <div id="toggleReturn"></div>
+
+            </div>
+
+            <label class="label"><i></i>Display image results?</label>
+
+        {% endif %}
+
+            <script>
+
+            function alertEventChange() {
+
+                const html = '<img class="img-fluid rounded" src={{img_results}} onclick="imgEnlarge()" style="contain:content;">';
+
+                var originToggle = document.getElementById("toggleReturn");
+
+                var moveToggle = document.getElementById("newToggle");
+
+                var status = document.getElementById("toggle");
+
+                var resultImg = document.getElementById("resultImage");
+
+                if (status.checked) {
+
+                    resultImg.innerHTML = "<p></p>";
+
+                    originToggle.appendChild(status);
+
+                    return true;
+
+                } else {
+
+                    resultImg.innerHTML = html;
+
+                    moveToggle.appendChild(status);
+
+                    return false;
+
+                }
+
+            }
+
+            </script>
+
+        </div>
+
+        </div>
+
+        </div>
+
+        {% if output %}
+
+        <p class="text-center rounded-pill" style="font-size: 15px;color: white;
+
+        font-weight: bold;background-color: rgb(43, 43, 43);margin-left: 8%;
+
+        margin-right: 8%;margin-top: 4%;" id="SumValue"
+
+        >Spare change amount is ${{output}}</p>
+
+        {% endif %}
+
+</div>
+
+        </Body>
+
+</div>
+
+</div>
+
+<script>
+
+function myFunction() {
+
+  var x = document.getElementById("myTopnav");
+
+  if (x.className === "topnav") {
+
+    x.className += " responsive";
+
+  } else {
+
+    x.className = "topnav";
+
+  }
+
+}
+
+</script>
+
+<script>
+
+function Submission() {
+
+    var n = document.getElementById("FormSubmit");
+
+    if (n.className === "form-control") {
+
+        n.submit();
+
+    }
+
+}
+
+</script>
+
+<script type="text/javascript" src="static/css/bootstrap.js"></script>
+
+<script type="text/javascript" src="static/css/custom.js"></script>
+
+<script>
+
+         var myapp = angular.module("app", []);
+
+        myapp.controller("geek", function($scope) {
+
+            $scope.show = true;
+
+    </script>
+
+</body>
+
+<footer></footer>
+
+</html>
+
+<!---<script>
+
+function imgShrink() {
+
+    var y = document.getElementById("AnnotatedImage");
+
+    y.className = "img-fluid";{
+
+        }
+
+</script>
+
+<script>
+
+function imgEnlarge() {
+
+  var image = document.getElementById("image");
+
+  if (image.className === "img-fluid") {
+
+    image.className = " container.active";
+
+    else if (i.className === "container.active")
+
+        document.addEventListener("dblclick", imgShrink);
+
+  } else {
+
+    i.className = "img-fluid";
+
+  }
+
+}
+
+ </script>--->
+
+<!---<script>
+
+document.addEventListener('DOMContentLoaded', () => {
+
+    document.querySelector('#splash').addEventListener('transitionend', (event) => {
+
+      event.target.remove();
+
+    });
+
+    requestAnimationFrame(() => {
+
+      document.querySelector('#splash').classList.add('animate');
+
+    });
+
+  });
+
+  </script>---->
+
+<!---  $(function() {
+
+ // $('#loading-bg').hide();
+
+  $('#loading-image').hide();
+
+  $(window).on('beforeunload', function() {
+
+    //$('#loading-bg').show();
+
+    $('#loading-image').show();
+
+  });
+
+});--->
+
+<!---="splash"></div>-->
+
+   <!---<div>
+
     <img src = "/static/Photo_1673841812649.png"
+
     style = "width: 200px; height: 200px;
+
     margin: auto; display: block;">
+
     </div>--->
 
         <!---<h1 class="text-center rounded-pill" style="color:yellow;font-size:39px ;background-color:black;
+
         border-style:ridge ;contain:content ;margin-left:5% ;margin-right:5% ;font:FuturaBT-Medium;
+
         margin-bottom:3%;padding:12px;" >CoinEye</h1>--->
 
-        <form class="ps-3 text-center" action="/", method="post" enctype="multipart/form-data" id="RootForm" style="text-shadow: fuchsia;">
-            <input class="form-control" type="file" name="img_file" style="box-shadow:inset;font-size:17px;margin-right:2%; "
-            id="FormSubmit" onclick="Submission()">
-            <button class="btn btn-warning mt-3" style="size:14% ;margin-top:12%;
-            padding:3px;" type="submit" id="SubmitButton" onclick="updateButton()"
-            >Get Amount ----> $$$</button>
-        </form>
+  <!---- <div class="d-flex no-effect"
 
-            {% if output %}
-            <p class="text-center rounded-pill" style="font-size: 17px;color: black;
-            font-weight: bold;background-color: rgb(43, 43, 43);margin-left: 8%;
-            margin-right: 8%;margin-top: 7%;" id="SumValue"
-            >Spare change amount is ${{output}}</p>
-            {% endif %}
-            </Body>
+  data-trigger-switch="toggle-id-1"
 
-<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
+  data-bs-toggle="collapse"
 
-<!---<script type="text/javascript">
-function updateButton() {
-    var x = document.getElementById("SubmitButton");
-    var y = document.getElementById("SumValue");
-    if (x.className === "btn") {
-        y.value = "Spare change ammount is $" + "{{output}}";
-    }   else {
-        y.value = "Sorry There Was An Error";--->
+  href="#collapseExample1"
 
-<script>
-function Submission() {
-    var n = document.getElementById("FormSubmit");
-    if (n.className === "form-control") {
-        n.submit();
-    }
-}
-</script>
-</body>
-</html>
+  role="button"
 
+  aria-expanded="false"
+
+  aria-controls="collapseExample1">
+
+      <div class="pt-1">
+
+          <h5 class="font-600" style="font-color:white;">Show Image Results?</h5>
+
+          </div>
+
+          <div class="ms-auto me-4 pe-2">
+
+              <div class="custom-control ios-switch">
+
+                  <input type="checkbox" class="ios-input" id="toggle-id-1">
+
+              <label class="custom-control-label" for="toggle-id-1"></label>
+
+            </div>
+
+        </div>
+
+            </div>
+
+            <div class="collapse" id="collapseExample1">
+
+                <p class="mb-0 pb-0 pt-2">This is just a text. You can add any content you want inside toggles. It will work like a charm.</p>
+
+                </div>
+
+                <script type="text/javascript" src="/static/css/bootstrap.min.js"></script>
+
+                <script type="text/javascript" src="/static/css/custom.js"></script>
+
+                <div class="divider mt-3 mb-3"></div>
+
+                <!---<div data-menu-load="menu-footer.html"></div>--->
+
+   <!--- </div>--->
+
+    <!-- Page content ends here-->
+
+    <!---<ion-item>
+
+                    <ion-label>Checked Toggle</ion-label>
+
+                    <ion-toggle slot="end" checked="true"></ion-toggle>
+
+                </ion-item>
+
+                    <ion-item>
+
+                        <ion-label>Disabled Toggle</ion-label>
+
+                        <ion-toggle slot="end" disabled="true"></ion-toggle>
+
+                    </ion-item>
+
+                    <ion-item>
+
+                        <ion-label>Disabled Checked Toggle</ion-label>
+
+                        <ion-toggle slot="end" checked="true" disabled="true"></ion-toggle>
+
+                    </ion-item>
+
+                    </ion-list>--->
+
+        <!----<div class="css-script-ads" style="margin:5px auto">
+
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+            <!-- CSSScript Demo Page -->
+
+           <!---- <ins class="adsbygoogle"
+
+            style="display:inline-block;width:600px;height:40px"
+
+            data-ad-client="ca-pub-2783044520727903"
+
+            data-ad-slot="3025259193"></ins>
+
+            <script>
+
+            (adsbygoogle = window.adsbygoogle || []).push({});
+
+            </script></div>--->
+
+        <!----<label class="form-switch container label" style="font-color:white; font-size:12px; margin-left:10px;">
+
+                 <i></i>Display result image </label>--->
+
+                <!---<script>
+
+                function checkStatus() {
+
+                    var isChecked = document.getElementById('cbox1').checked;
+
+                    console.log(isChecked);
+
+                }
+
+                </script>---->
+
+         <!---<script>
+
+            function alertEventChange() {
+
+                var switch = document.getElementById("toggle");
+
+                switch.alertEvent = switch.alertEvent ? false : true;
+
+                console.log(switch.alertEvent); }
+
+            </script>--->
 
